--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
       - name: install flake8 
         run: |
-          python -m pip install --upgrade-pip
           pip install flake8
 
       - name: run flake8
