--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,12 +14,18 @@ jobs:
         with:
           python-version: '3.10'
 
+      # Force upgrade pip using python -m
       - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
-      - name: install flake8 
         run: |
-          pip install flake8
+          python -m pip install --upgrade pip
+
+      - name: Check pip version
+        run: |
+          pip --version
+
+      - name: install flake8
+        run: |
+          python -m pip install flake8
 
       - name: run flake8
         run: |
