--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,18 +14,13 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Force upgrade pip using python -m
       - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip
 
-      - name: Check pip version
+      - name: install flake8 
         run: |
-          pip --version
-
-      - name: install flake8
-        run: |
-          python -m pip install flake8
+          pip install flake8
 
       - name: run flake8
         run: |
