--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,13 @@ on: push
 
 jobs:
   linting:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os}}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.10', '3.12']
+
     steps:
       - name: code-checkout
         uses: actions/checkout@v3
@@ -12,7 +18,7 @@ jobs:
       - name: setup-python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
 
       - name: Upgrade pip
         run: |
