--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,12 @@
 name: CI
 
-on: push
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   linting:
@@ -31,3 +37,19 @@ jobs:
       - name: run flake8
         run: |
           flake8 app.py
+
+  unittest:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: code-checkout
+        uses: actions/checkout@v3
+
+      - name: setup-python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+
+      - name: run unittest
+        run: |
+          python -m unittest discover 
